@@ -29,7 +29,6 @@ LOCAL_SRC_FILES  :=    \
     $(COMMON)/blib_sound.c       \
     $(COMMON)/brun.c             \
     $(COMMON)/ceval.c            \
-    $(COMMON)/decomp.c           \
     $(COMMON)/device.c           \
     $(COMMON)/screen.c           \
     $(COMMON)/system.c           \
