@@ -1,3 +1,7 @@
+2018-02-03 (0.12.12)
+	COMMON: restore 6d array handling
+	COMMON: increase default stack size
+
 2018-01-13 (0.12.12)
 	Fix osx crash
 
